--- a/.github/workflows/call-api.yml
+++ b/.github/workflows/call-api.yml
@@ -4,11 +4,11 @@ on:
   schedule:
     # Cron syntax (UTC time):
     # 8:55 CET = 7:55 UTC
-    - cron: '59 7 * * 1-7'
+    - cron: '3 8 * * 8'
     # 9:00 CET = 8:00 UTC
-    - cron: '0 8 * * 1-7'
+    - cron: '5 8 * * 8'
     # 9:05 CET = 8:05 UTC
-    - cron: '5 8 * * 1-7'
+    - cron: '6 8 * * 8'
 
 jobs:
   clear-db:
