--- a/.github/workflows/call-api.yml
+++ b/.github/workflows/call-api.yml
@@ -4,15 +4,15 @@ on:
   schedule:
     # Cron syntax (UTC time):
     # 8:55 CET = 7:55 UTC
-    - cron: '5 8 * * 6'
+    - cron: '8 8 * * 6'
     # 9:00 CET = 8:00 UTC
-    - cron: '6 8 * * 6'
+    - cron: '9 8 * * 6'
     # 9:05 CET = 8:05 UTC
-    - cron: '7 8 * * 6'
+    - cron: '10 8 * * 6'
 
 jobs:
   clear-db:
-    if: github.event.schedule == '55 7 * * 1-5'
+    if: github.event.schedule == '8 8 * * 6'
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +22,7 @@ jobs:
           -H "x-api-key: ${{ secrets.API_KEY }}"
 
   call-api-9100:
-    if: github.event.schedule == '0 8 * * 1-5'
+    if: github.event.schedule == '9 8 * * 6'
     runs-on: ubuntu-latest
 
     steps:
@@ -32,7 +32,7 @@ jobs:
           -H "x-api-key: ${{ secrets.API_KEY }}"
 
   call-api-9103:
-    if: github.event.schedule == '5 8 * * 1-5'
+    if: github.event.schedule == '10 8 * * 6'
     runs-on: ubuntu-latest
 
     steps:
