--- a/.github/workflows/clear-db.yml
+++ b/.github/workflows/clear-db.yml
@@ -2,7 +2,8 @@ name: Clear Database
 
 on:
   schedule:
-    - cron: '19 8 * * *' # 55 7 * * 1-5 = 7:55 UTC = 8:55 CET (pondělí až pátek)
+    - cron: '35 8 * * *' # 55 7 * * 1-5 = 7:55 UTC = 8:55 CET (pondělí až pátek)
+  workflow_dispatch:  # Tento řádek umožňuje manuální spuštění
 
 jobs:
   clear-db:
