--- a/.github/workflows/call-api-9103.yml
+++ b/.github/workflows/call-api-9103.yml
@@ -2,8 +2,8 @@ name: Call API for Line 9103
 
 on:
   schedule:
-    - cron: '22 8 * * 6'
-  workflow_dispatch:  # Tento řádek umožňuje manuální spuštění
+    - cron: '18 4 * * 1-5' # 4:15 UTC = 5:15 CET (pondělí až pátek)
+  workflow_dispatch:
 jobs:
   call-api-9103:
     runs-on: ubuntu-latest
