--- a/.github/workflows/clear-db.yml
+++ b/.github/workflows/clear-db.yml
@@ -2,7 +2,7 @@ name: Clear Database
 
 on:
   schedule:
-    - cron: '35 8 * * *' # 55 7 * * 1-5 = 7:55 UTC = 8:55 CET (pondělí až pátek)
+    - cron: '30 0 * * *' # 00:30 UTC = 01:30 CET
   workflow_dispatch:  # Tento řádek umožňuje manuální spuštění
 
 jobs:
