--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
     "routes": [
-        { "src": "/api/.*", "dest": "/api" },
-        { "src": "/(.*)", "dest": "/index.html" }
+        { "src": "/api/.*", "dest": "/api" }
     ]
 }
